Pass domain and port separately and fix letsenc.
This allows to add the correct port to the security group.
Add some logic to autogenerate the public_url fro it, but
allow it to be overriden.

letsenc_* were not passed into the script previously, this is fixed now.

If letsenc_mail is set, we will try to generate Let's Encrypt
certificates on the fly now. cert.* still needs to exist, but won't get
used (and can thus be empty files). Let's Encrypt is untested thus far.

--- a/.dyndns.template
+++ b/.dyndns.template
@@ -1,4 +1,4 @@
 DUSER="DDNS_USERNAME"
 DPASS="DDNS_PASSWORD"
-DDOM=MY.DOMAIN.NAME
+DDOM=$PUB_DOM
 DURL="https://$DUSER:$DPASS@MY.REGISTRAR.COM/nic/update?hostname=$DDOM\&myip=$JITSI_ADDRESS"
