--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -32,15 +32,28 @@ parameters:
   jitsi_password:
     type: string
 
-  public_url:
+  public_domain:
     type: string
 
-  letsenc_mail:
-    type: string
-  
+  public_port:
+    type: integer
+    default: 8443
+
   letsenc_domain:
     type: string
+    default: {get_param: public_domain}
 
+  # If you set this, no cert.crt/key will get copied in
+  letsenc_mail:
+    type: string
+    default: ""
+
+   public_url:
+    type: string
+    default: ""
+    # By default https://{get_param: public_domain}:{get_param: public_port}/ will be used
+
+ 
 ##########
 resources:
 
@@ -74,6 +87,7 @@ resources:
           - docker-compose
           - make
         write_files:
+          # Remove those two if you don't need them
           - content: {get_file: cert.crt}
             path: /root/cert.crt
             permissions: 0644
@@ -86,7 +100,11 @@ resources:
                   wc_notify: {get_attr: ['jitsi_wait_handle', 'curl_cli']}
                   jitsi_user: {get_param: jitsi_user}
                   jitsi_password: {get_param: jitsi_password}
+                  public_domain: {get_param: public_domain}
+                  public_port: {get_param: public_port}
                   public_url: {get_param: public_url}
+                  letsenc_mail: {get_param: letsenc_mail}
+                  letsenc_domain: {get_param: letsenc_domain}
                 template: |
                   #!/usr/bin/env bash
                   export USER=root
@@ -106,11 +124,15 @@ resources:
                   cd ..
                   # This is only used internally
                   sed -i 's/passw0rd/p@33W0rd/g' .env
-                  sed -i 's@^#PUBLIC_URL=.*$@PUBLIC_URL=public_url/@' .env
+                  PUBLIC_URL="public_url"
+                  if test -z "$PUBLIC_URL"; then PUBLIC_URL="https://public_domain:public_port/"; fi
+                  sed -i "s@^#PUBLIC_URL=.*\$@PUBLIC_URL=$PUBLIC_URL/@" .env
                   IP=$(ip addr show eth0 | grep 'inet ' | sed 's@^ *inet \([0-9\.]*\)/\([0-9]*\) .*$@\1@')
                   sed -i "s@^#DOCKER_HOST_ADDRESS=.*\$@DOCKER_HOST_ADDRESS=$IP@" .env
-                  #sed -i 's/^#LETSENCRYPT_EMAIL=.*$/LETSENCRYPT_EMAIL=letsenc_mail/' .env
-                  #sed -i 's@^#LETSENCRYPT_DOMAIN=.*$@LETSENCRYPT_DOMAIN=letsenc_domain@' .env
+                  if test -n "letsenc_mail"; then
+                    sed -i 's/^#LETSENCRYPT_EMAIL=.*$/LETSENCRYPT_EMAIL=letsenc_mail/' .env
+                    sed -i 's@^#LETSENCRYPT_DOMAIN=.*$@LETSENCRYPT_DOMAIN=letsenc_domain@' .env
+                  fi
                   #sed -i 's@^#ETHERPAD_URL_BASE@ETHERPAD_URL_BASE@' .env
                   sed -i 's@^#ENABLE_AUTH@ENABLE_AUTH@' .env
                   sed -i 's@^#ENABLE_GUESTS@ENABLE_GUESTS@' .env
@@ -119,10 +141,11 @@ resources:
                   docker-compose -f ~/docker-compose.yml up -d
                   # Deploy SSL cert
                   openssl dhparam -out ~/.jitsi-meet-cfg/web/nginx/dhparams.pem 2048
-                  # Comment out if you do not want to inject a pre-generated certificate
-                  # Instead enable LETSENCRYPT above
-                  cp -p cert.crt ~/.jitsi-meet-cfg/web/keys/cert.crt
-                  cp -p cert.key ~/.jitsi-meet-cfg/web/keys/cert.key
+                  # Only if not using LETSENCRYPT
+                  if test -z "letsenc_mail"; then
+                    cp -p cert.crt ~/.jitsi-meet-cfg/web/keys/cert.crt
+                    cp -p cert.key ~/.jitsi-meet-cfg/web/keys/cert.key
+                  fi
                   # Deploy one user
                   docker exec root_prosody_1 prosodyctl --config /config/prosody.cfg.lua register jitsi_user meet.jitsi jitsi_password
                   docker restart root_web_1
@@ -162,6 +185,7 @@ resources:
           protocol: tcp
           port_range_min: 22
           port_range_max: 22
+          # Port 80 needed for letsenc acme challenge?
         - remote_ip_prefix: 0.0.0.0/0
           protocol: tcp
           port_range_min: 80
@@ -170,9 +194,8 @@ resources:
           protocol: icmp
         - remote_ip_prefix: 0.0.0.0/0
           protocol: tcp
-          port_range_min: 8443
-          port_range_max: 8443
-          # Note: This assumes a public_url ending in 8443, TODO: adjust
+          port_range_min: {get_param: public_port}
+          port_range_max: {get_param: public_port}
         - remote_ip_prefix: 0.0.0.0/0
           protocol: udp
           port_range_min: 10000
