--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -98,6 +98,9 @@ resources:
           - content: {get_file: cert.key}
             path: /root/cert.key
             permissions: 0600
+          - content: {get_file: enable-constraints.sed}
+            path: /root/enable-constraints.sed
+            permissions: 0644
           - content:
               str_replace:
                 params:
@@ -121,6 +124,9 @@ resources:
                   systemctl enable docker
                   systemctl restart docker
                   mkdir -p ~/.jitsi-meet-cfg/{web/letsencrypt,transcripts,prosody,jicofo,jvb}
+                  mkdir -p ~/.jitsi-meet-cfg/web/nginx
+                  # Generate Diffie-Hellmann parameters for SSL
+                  openssl dhparam -out ~/.jitsi-meet-cfg/web/nginx/dhparams.pem 2048 &
                   git clone https://github.com/jitsi/docker-jitsi-meet
                   cd docker-jitsi-meet
                   make
@@ -146,8 +152,6 @@ resources:
                   sed -i 's@^#AUTH_TYPE=@AUTH_TYPE=@' .env
                   #docker-compose -f ~/docker-compose.yml -f ~/etherpad.yml up -d
                   docker-compose -f ~/docker-compose.yml up -d
-                  # Deploy SSL cert
-                  openssl dhparam -out ~/.jitsi-meet-cfg/web/nginx/dhparams.pem 2048
                   # Only if not using LETSENCRYPT
                   if test -z "letsenc_mail"; then
                     cp -p cert.crt ~/.jitsi-meet-cfg/web/keys/cert.crt
@@ -155,6 +159,15 @@ resources:
                   fi
                   if test -n "tweak_ideal_height" -a "tweak_ideal_height" != "0"; then
                      sed -i "s@^\(.*ideal:\)[ 0-9]*@\1 tweak_ideal_height@" ~/.jitsi-meet-cfg/web/config.js
+                     # TODO: Enable the complete Constraints section
+                     sed -f enable-constraints.sed -i ~/.jitsi-meet-cfg/web/config.js
+                     # TODO: Ensure Simulcast is NOT disabled
+                     sed -i 's@^ */* *disableSimulcast:.*$@    disableSimulcast: false,@' ~/.jitsi-meet-cfg/web/config.js
+                     # TODO: Add tweak to enableLayerSuspension
+                     sed -i 's@^ */* *enableLayerSuspension:.*$@    enableLayerSuspension: true,@' ~/.jitsi-meet-cfg/web/config.js
+                     # TODO: Allow SuspendVideo
+                     #sed -i 's@^ */* *disableSuspendVideo:.*$@    disableSuspendVideo: false,@'  ~/.jitsi-meet-cfg/web/config.js
+                     # TODO: StartVideoMuted: 10 enablement
                   fi
                   # Deploy one user
                   docker exec root_prosody_1 prosodyctl --config /config/prosody.cfg.lua register jitsi_user meet.jitsi jitsi_password
