--- a/.dyndns.template
+++ b/.dyndns.template
@@ -1,3 +1,3 @@
 DUSER="DDNS_USERNAME"
 DPASS="DDNS_PASSWORD"
-DURL="https://$DUSER:$DPASS@MY.REGISTRAR.COM/nic/update?hostname=$PUB_DOM\&myip=$JITSI_ADDRESS"
+DURL="https://$DUSER:$DPASS@MY.REGISTRAR.COM/nic/update?hostname=$PUB_DOM&myip=$JITSI_ADDRESS"
