--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -14,20 +14,20 @@ parameters:
     type: string
     constraints:
       - custom_constraint: nova.flavor
-    #OTC default: s2.large.4
-    default: 2C-4GB-10GB
+    default: s2.large.4
+    #default: 2C-4GB-10GB
 
   availability_zone:
     type: string
-    #OTC default: eu-de-03
-    default: nova
+    default: eu-de-03
+    #default: nova
 
   public:
     type: string
     constraints:
       - custom_constraint: neutron.network
-    #OTC default: admin_external_net
-    default: ext-net
+    default: admin_external_net
+    #default: ext-net
 
   jitsi_user:
     type: string
