--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -290,8 +290,8 @@ resources:
           port_range_max: 10010
         - remote_ip_prefix: 0.0.0.0/0
           protocol: udp
-          port_range_min: 5060
-          port_range_max: 5061
+          port_range_min: {get_param: jigasi_sip_port}
+          port_range_max: {get_param: jigasi_sip_port}
 
   ############
   # Networks #
