Support tweak_aspectRatio and alwys require name.
This allows to set the wanted video aspectRatio (4/3 instead of 16/9) if
users prefer it.
This is documented and reflected in the template.

Also, let's always set requireDisplayName, so users need to enter a
name.

--- a/jitsi-user-template.yml
+++ b/jitsi-user-template.yml
@@ -11,4 +11,8 @@ parameter_defaults:
   #letsenc_domain: DOMAIN_FOR_LETSENCRYPT
   #jigasi_sip_uri: username@registrar
   #jigasi_sip_password: sippasswd
+  #jigasi_default_room: default room to dial into
+  #tweak_ideal_height: 540
+  #tweak_aspectRatio: 4/3
+  #tweak_channelLastN: 6
 
