--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -70,6 +70,10 @@ parameters:
     type: number
     default: 720
 
+  tweak_aspectRatio:
+    type: string
+    default: 16/9
+
   tweak_channelLastN:
     type: number
     default: -1
@@ -170,6 +174,7 @@ resources:
                   letsenc_domain: {get_param: letsenc_domain}
                   letsenc_http_port: {get_param: letsenc_http_port}
                   tweak_ideal_height: {get_param: tweak_ideal_height}
+                  tweak_aspectRatio: {get_param: tweak_aspectRatio}
                   tweak_channelLastN: {get_param: tweak_channelLastN}
                   jigasi_sip_uri: {get_param: jigasi_sip_uri}
                   jigasi_sip_server: {get_param: jigasi_sip_server}
@@ -259,6 +264,9 @@ resources:
                     cp -p ~/.jitsi-meet-cfg/web/letsencrypt/$LETSENC_DOM/fullchain.pem cert.crt
                   fi
                   sleep 1
+                  if test -n "tweak_aspectRatio"; then
+                     sed -i "s@aspectRatio: [0-9/, ]*\$@aspectRatio: tweak_aspectRatio@" ~/.jitsi-meet-cfg/config.js
+                  fi
                   if test -n "tweak_ideal_height" -a "tweak_ideal_height" != "0"; then
                      sed -i "s@^\(.*ideal:\)[ 0-9]*@\1 tweak_ideal_height@" ~/.jitsi-meet-cfg/web/config.js
                      sed -i "s@^\(.*min:\)[ 0-9]*@\1 180@" ~/.jitsi-meet-cfg/web/config.js
@@ -275,6 +283,7 @@ resources:
                   if test -n "tweak_channelLastN" -a "tweak_channelLastN" != "-1"; then
                     sed -i 's@channelLastN: [-0-9]*@channelLastN: tweak_channelLastN@' ~/.jitsi-meet-cfg/web/config.js
                   fi
+                  sed -i 's@^ */* *requireDisplayName:.*$@    requireDisplayName: true,@' ~/.jitsi-meet-cfg/web/config.js
                   # Deploy one user
                   docker exec root_prosody_1 prosodyctl --config /config/prosody.cfg.lua register jitsi_user meet.jitsi jitsi_password
                   # Restart web container to make SSL/height changes effective
