--- a/jitsi-user-template.yml
+++ b/jitsi-user-template.yml
@@ -8,13 +8,12 @@ parameter_defaults:
   public_port: PORT_FOR_JITSI
   # Optional
   #timezone: Europe/Amsterdam
-  #UIlanguage: nl
+  #ui_language: nl
   #letsenc_mail: MAIL_FOR_LETSENCRYPT
   #letsenc_domain: DOMAIN_FOR_LETSENCRYPT
   #jigasi_sip_uri: username@registrar
   #jigasi_sip_password: sippasswd
   #jigasi_default_room: default room to dial into
   #tweak_ideal_height: 540
-  #tweak_aspectRatio: 4/3
   #tweak_channelLastN: 6
 
